[tool.poetry]
name = "expency"
version = "0.1.0"
description = ""
authors = ["tenngage ibi0880@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tabulate = "^0.9.0"
argparse = "^1.4.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
